--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,11 @@ uuid = "53256ec5-896c-476c-9209-850188b27ce5"
 authors = ["W. Joe Meese <meesewj@gmail.com> and contributors"]
 version = "0.0.1"
 
+[deps]
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+
 [compat]
+StaticArrays = "1.9.8"
 julia = "1.11"
 
 [extras]
