--- a/Project.toml
+++ b/Project.toml
@@ -4,9 +4,11 @@ authors = ["W. Joe Meese <meesewj@gmail.com> and contributors"]
 version = "0.0.1"
 
 [deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
+LinearAlgebra = "1.11.0"
 StaticArrays = "1.9.8"
 julia = "1.11"
 
