--- a/Project.toml
+++ b/Project.toml
@@ -10,10 +10,14 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 [compat]
 LinearAlgebra = "1.11.0"
 StaticArrays = "1.9.8"
+BenchmarkTools = "1.5.0"
 julia = "1.11"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [targets]
-test = ["Test"]
+test = ["Test", "BenchmarkTools", "LinearAlgebra", "StaticArrays"]
